# travel-optimization-app

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: travel-app.mdc
reference/mcp-server-reference/: README.md  smart-sdk-test.py
reference/mcp-server-reference/model/: customer_profile_request.py  customer_profile_response.py
reference/mcp-server-reference/server/: pteaas-mcp-server.py
