[project]
name = "travel-optimization-app"
version = "0.1.0"
description = "Travel optimization application with multiple MCP servers"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.12"
dependencies = [
    "chase-travel-mcp @ file:///packages/mcp_servers/chase_travel",
    "safepay-wallet-mcp @ file:///packages/mcp_servers/safepay_wallet",
    "benefits-mcp @ file:///packages/mcp_servers/benefits",
    "optimization-agent @ file:///packages/optimization_agent",
    "shared @ file:///packages/shared"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
python = "3.12" 